Fix gallery layout issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2340,14 +2340,15 @@ a.go-to-home::after {
 }
 
 .masonry-brick img {
-  flex: auto;
-  min-height: 250px;
   min-width: 150px;
+  min-height: 250px;
+  border-radius: 5px;
+  flex: auto;
 }
 
 .hovered-content {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   z-index: 5000;
   transform: translate(-50%, -50%);
@@ -2365,6 +2366,10 @@ a.go-to-home::after {
   font-size: 2.25em;
   color: white;
   opacity: 0.75;
+}
+
+a.masonry-brick::after {
+  background-color: transparent;
 }
 
 @media only screen and (min-width: 1024px) {
